# -*- sh -*-

# -------------------------------------------------
# CHANGELOG - multi-chan-fit.py
# -------------------------------------------------

# Key is:
# [+] added
# [-] removed
# [~] changed/fixed
# [V] version change
# ====================================================================


# 2017-06-14
# --------------------------------------------------------------------
# + cut release v6.4
# + added new calib64() and resol64()


# 2017-06-12
# --------------------------------------------------------------------
# ~ split data in build64 into crystal number to speed up processing
# ~ added the alpha cut back in
# ~ pushpa fixed merging issue with rqtD1_5


# 2017-06-08
# --------------------------------------------------------------------
# ~ temp got rid of alpha cut
# ~ should NOT be doing groupNo > 1 cut
# ~ change cut to crystalX.rqcn > -1
# ~ fixed a few more plotting bugs


# 2017-06-07
# --------------------------------------------------------------------
# ~ tweak legend size
# + add groups to the legends
# + start working on plotting bkgs and sigs in groups
# + added setGroup() to start organizing things into groups
# + added chan [A] cuts to cutsBDT()
# ~ cleaned up some print statements
# ~ itterate over channels after reading in rootfiles - this should
#   speed up the processing time
# + added onCup() and baseDir() to make paths a little easier
# ~ change data[key][runtime] to use real duration
# + added getDuration() to get duration of data rootfiles


# 2017-06-06
# --------------------------------------------------------------------
# ~ changed default histogram binning parameters
# + rebinning option for low energy fits and final plots
# + added histparam64()
# + added makeTotal64(), makeResid64(), and globalParams()
# ~ scaling functions now get histogram params to determine keV per bin
# ~ tweaked histparam() to also return bins per keV
# + added getPars(), dataDRU64(), scaleBkgs64(), and scaleSigs64()