@@ -14,6 +14,7 @@
 
 # 2017-06-14
 # --------------------------------------------------------------------
+# V switch to 70-extend-histos.py
 # + cut release v6.4
 # + added new calib64() and resol64()
 
